<resources>
    <string name="digits_pwd">qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890.</string>
    <string name="digits_money">.1234567890</string>
    <string name="app_1">再按一次返回键退出</string>
    <string name="app_2">¥</string>
    <string name="app_3">确认</string>
    <string name="app_4">查看全部</string>
    <string name="app_5">更多</string>
    <string name="app_6">请选择</string>
    <string name="app_7">请添加</string>
    <string name="app_8">编辑</string>
    <string name="app_9">姓名</string>
    <string name="app_10">身份证号</string>
    <string name="app_11">确定</string>
    <string name="app_12">保存</string>
    <string name="app_13">提交</string>
    <string name="app_14">完成</string>
    <string name="app_15">分享</string>
    <string name="app_16">取消</string>
    <string name="app_17">添加</string>
    <string name="app_18">请登录</string>
    <string name="app_19">请输入正确的手机号</string>
    <string name="app_20">提交成功</string>
    <string name="app_21">提交失败</string>
    <string name="app_22">确定删除？</string>
    <string name="app_23">男</string>
    <string name="app_24">女</string>
    <string name="app_25">敬请期待</string>
    <string name="app_26">选填</string>
    <string name="app_27">复制</string>
    <string name="app_28">拍照</string>
    <string name="app_29">相册</string>
    <string name="app_30">确定删除缓存？</string>
    <string name="app_31">确定清空？</string>
    <string name="app_32">删除</string>
    <string name="app_33">已复制</string>
    <string name="app_34">%1$s天%2$s时%3$s分%4$s秒</string>
    <string name="app_35">%1$s时%2$s分%3$s秒</string>
    <string name="app_36">%1$s分%2$s秒</string>
    <string name="app_37">%s秒</string>
    <string name="app_38">拨打客服热线</string>
    <string name="app_39">请填写</string>
    <string name="app_40">手机号不能为空</string>
    <string name="app_41">密码不能为空</string>
    <string name="app_42">关闭</string>
    <string name="app_43">验证码不可为空</string>
    <string name="app_44">确认密码不能为空</string>
    <string name="app_45">易网购商城</string>
    <string name="app_46">为全球消费者甄选优质商品</string>
    <string name="app_47">关闭应用</string>
    <string name="app_48">返回首页</string>
    <string name="app_49">返回</string>
    <string name="app_50">关闭</string>
    <string name="app_51">%1$s天%2$s小时</string>
    <string name="app_52">%1$s:%2$s:%3$s</string>
    <string name="app_53">暂无数据</string>
    <string name="app_54">全选</string>
    <string name="app_55">查看</string>
    <string name="app_56">已确认</string>
    <string name="app_57">已取消</string>
    <string name="app_58">登录</string>
    <string name="update_1">版本更新</string>
    <string name="update_2">立即更新</string>
    <string name="update_3">下次再说</string>
    <string name="pay_1">确认付款</string>
    <string name="pay_2">订单号</string>
    <string name="pay_3">付款方式</string>
    <string name="pay_4">选择支付方式</string>
    <string name="pay_5">立即付款</string>
    <string name="pay_6">支付成功</string>
    <string name="pay_7">支付失败</string>
    <string name="pay_8">支付取消</string>
    <string name="pay_9">开联通支付</string>
    <string name="pay_10">支付系统维护中</string>
    <string name="permission_1">权限被拒绝</string>
    <string name="permission_2">跳转到设置开启权限？</string>
    <string name="l_1">中文</string>
    <string name="l_2">English</string>
    <string name="l_3">Español</string>
    <string name="l_4">Deutschland</string>
    <string name="l_5">Français</string>
    <string name="l_6">Italiano</string>
    <string name="l_7">Português</string>
    <string name="app_name">Battery2Box</string>
    <string name="m_1">€</string>
    <string name="scan_1">将二维码/条码放入框内, 即可自动扫描</string>
    <string name="scan_2">扫一扫</string>
    <string name="scan_3">相册</string>
    <string name="scan_4">无效的二维码</string>
    <string name="refresh_1">下拉可以刷新</string>
    <string name="refresh_2">正在刷新...</string>
    <string name="refresh_3">释放立即刷新</string>
    <string name="refresh_4">刷新完成</string>
    <string name="refresh_5">正在加载...</string>
    <string name="refresh_6">加载完成</string>
    <string name="login_0">记住密码</string>
    <string name="login_1">登录</string>
    <string name="login_2">手机号码登录:</string>
    <string name="login_3">请输入手机号码</string>
    <string name="login_4">请输入密码</string>
    <string name="login_5">密码</string>
    <string name="login_6">注册新账号</string>
    <string name="login_7">忘记密码</string>
    <string name="login_8">注册新账号</string>
    <string name="login_9">确认密码</string>
    <string name="login_10">验证码</string>
    <string name="login_11">请再次输入密码</string>
    <string name="login_12">请输入验证码</string>
    <string name="login_13">获取验证码</string>
    <string name="login_14">注册</string>
    <string name="login_15">登录即视为同意</string>
    <string name="login_16"> 法律条款，用户协议 </string>
    <string name="login_17">密码输入不一致</string>
    <string name="login_18">请同意用户协议</string>
    <string name="login_19">注册成功</string>
    <string name="login_20">获取成功</string>
    <string name="login_21">手机号</string>
    <string name="login_22">搜索</string>
    <string name="login_23">热门</string>
    <string name="login_24">选择您的国家</string>
    <string name="login_25">原密码</string>
    <string name="login_26">新密码</string>
    <string name="login_27">请输入原密码</string>
    <string name="login_28">请输入新密码</string>
    <string name="login_29">请再次输入新密码</string>
    <string name="login_30">修改密码</string>
    <string name="login_31">修改成功</string>
    <string name="login_32"> 隐私政策 </string>
    <string name="login_33">和</string>
    <string name="main_1">搜索附近的Battery2Box</string>
    <string name="main_2">扫码租借</string>
    <string name="main_3">我的钱包</string>
    <string name="main_4">我的优惠券</string>
    <string name="main_5">租借记录</string>
    <string name="main_6">邀请好友</string>
    <string name="main_7">商户合作</string>
    <string name="main_8">帮助中心</string>
    <string name="main_9">更多</string>
    <string name="main_10">租借中</string>
    <string name="main_11">已为您续航%s分钟</string>
    <string name="main_12">查看详情</string>
    <string name="main_13">促销活动</string>
    <string name="borrow_1">租借信息</string>
    <string name="borrow_2">费用说明</string>
    <string name="borrow_3">新用户使用%s</string>
    <string name="borrow_4">免费</string>
    <string name="borrow_5">%s/小时</string>
    <string name="borrow_6">%s/天</string>
    <string name="borrow_7">%s/超过5天不归还</string>
    <string name="borrow_8">( 连续超过5天不归还电池，将会在您的账户上扣取%s，扣费成功后，您可以把电池留给自己使用，不需要归还）</string>
    <string name="borrow_9">%s/小时</string>
    <string name="borrow_10">(封顶 %s / 天)</string>
    <string name="borrow_11">(每24小时收费)</string>
    <string name="borrow_12">同意并租借</string>
    <string name="borrow_13">请及时从上图指示位置取走充电宝</string>
    <string name="borrow_14">若充电宝未弹出，请稍等片刻</string>
    <string name="borrow_15">租借失败</string>
    <string name="borrow_16">租借成功</string>
    <string name="borrow_17">可在全国任意机柜归还</string>
    <string name="borrow_18">查看充电宝使用说明</string>
    <string name="borrow_19">计费规则</string>
    <string name="borrow_20">分时计费</string>
    <string name="borrow_21">押金规则</string>
    <string name="borrow_22">自借出后开始计时，前%1$s分钟内免费；超过部分按照每1小时%2$s€计费，不足1小时按照1小时计算；每24小时%3$s€封顶</string>
    <string name="borrow_22_1">Cuando liberar tu batería ，los primeros %1$s minutos son gratuitos；El tiempo superior será facturada a %2$s Euro por hora y el tiempo inferior a 1 hora es por hora；Hay límite de %3$s Euro en 24 horas ,Pasado mas de 5 días de uso continuado se cargara %4$s Euro + IVA y podrás quedarte con la batería para uso personal sin tener que devolverla ,La norma de facturación no se cambia después del inicio de la Alquile .</string>
    <string name="borrow_23">租借充电宝需缴纳%1$s€押金。充电宝归还后，押金自动退还。当租借时间过长，租金达到%2$s€时，将自动扣除押金</string>
    <string name="borrow_24">%s/小时</string>
    <string name="wallet_1">账单</string>
    <string name="wallet_2">我的钱包</string>
    <string name="wallet_3">付款方式</string>
    <string name="wallet_4">借记卡和信用卡</string>
    <string name="wallet_5">进入</string>
    <string name="wallet_6">余额</string>
    <string name="wallet_7">充值</string>
    <string name="wallet_8">卡号</string>
    <string name="wallet_9">请输入卡号</string>
    <string name="wallet_10">持卡人姓名</string>
    <string name="wallet_11">请输入持卡人姓名</string>
    <string name="wallet_12">有效期</string>
    <string name="wallet_13">年</string>
    <string name="wallet_14">月</string>
    <string name="wallet_13_14"> 月 / 年</string>
    <string name="wallet_15">请输入cvv</string>
    <string name="wallet_16">请输入有效期</string>
    <string name="wallet_17">解除绑定</string>
    <string name="wallet_18">确定解除绑定？</string>
    <string name="wallet_19">已解绑</string>
    <string name="wallet_20">剩余抵扣时间</string>
    <string name="wallet_21">时间明细</string>
    <string name="wallet_22">订单号：%s</string>
    <string name="wallet_23">剩余%s分钟</string>
    <string name="wallet_24">银行卡信息</string>
    <string name="wallet_25">绑定银行卡</string>
    <string name="wallet_26">请选择充值金额</string>
    <string name="wallet_27">充值金额不能退还</string>
    <string name="wallet_28">分钟</string>
    <string name="wallet_29">赠送</string>
    <string name="wallet_30">确认充值？</string>
    <string name="shop_1">可借：%s</string>
    <string name="shop_2">可还：%s</string>
    <string name="shop_3">提供Wi-Fi</string>
    <string name="shop_4">不提供Wi-Fi</string>
    <string name="shop_5">禁烟</string>
    <string name="shop_6">允许抽烟</string>
    <string name="shop_7">可借</string>
    <string name="shop_8">可还</string>
    <string name="shop_9">菜单</string>
    <string name="order__0">未完成</string>
    <string name="order_0">已完成</string>
    <string name="order_1">租借时间</string>
    <string name="order_2">租借地点</string>
    <string name="order_3">费用合计</string>
    <string name="order_4">使用中出现问题？</string>
    <string name="order_5">订单号:%s</string>
    <string name="order_6">执行中</string>
    <string name="order_7">租借中</string>
    <string name="order_8">已归还</string>
    <string name="order_9">已撤销</string>
    <string name="order_10">超时结算</string>
    <string name="order_11">用户购买</string>
    <string name="order_12">未支付</string>
    <string name="order_13">已支付</string>
    <string name="order_14">订单详情</string>
    <string name="order_15">使用详情</string>
    <string name="order_16">租借时间</string>
    <string name="order_17">租借地点</string>
    <string name="order_18">归还时间</string>
    <string name="order_19">归还地点</string>
    <string name="order_20">价格明细</string>
    <string name="order_21">计费标准</string>
    <string name="order_22">使用时长</string>
    <string name="order_23">免费时长</string>
    <string name="order_24">每天封顶消费</string>
    <string name="order_25">支付金额</string>
    <string name="order_26">支付状态</string>
    <string name="order_27">支付类型</string>
    <string name="order_28">抵扣时长</string>
    <string name="order_29">买电池</string>
    <string name="order_30">我同意扣除20欧元购买充电宝并自动结束订单</string>
    <string name="order_31">计费规则</string>
    <string name="order_32">订单异常</string>
    <string name="order_33">%s/小时</string>
    <string name="order_34">信用卡支付</string>
    <string name="order_35">余额支付</string>
    <string name="order_36">免租金</string>
    <string name="order_37">同意</string>
    <string name="order_42">分钟</string>
    <string name="order_43">自借出后开始计时，前%1$s分钟免费；超过部分按照每1小时%2$s€计费，不足1小时按1小时计算；每24小时%3$s€封顶</string>
    <string name="helper_1">建议</string>
    <string name="helper_2">常见问题</string>
    <string name="helper_3">选择您发现的问题</string>
    <string name="helper_4">电池不能充电</string>
    <string name="helper_5">设备没有网络</string>
    <string name="helper_6">充电线断了</string>
    <string name="helper_7">其他问题</string>
    <string name="helper_8">扫描设备二维码</string>
    <string name="setting_4">隐私政策</string>
    <string name="p_alert_1">温馨提示</string>
    <string name="p_alert_2">1.我们可能会申请手机存储权限、摄像头、定位权限；</string>
    <string name="p_alert_3">2.为了信息推送和账号安全，我们会申请系统设备权限收集设备信息、日志信息；</string>
    <string name="p_alert_4">3.我们会努力采取各种安全技术保护您的个人信息，未经您同意，我们不会让第三方获取共享或对外提供您的信息；</string>
    <string name="p_alert_5">4.您还可以访问、更正、删除您的个人信息，我们也将提供注销、投诉方式。</string>
    <string name="p_alert_6">您可以阅读完整版</string>
    <string name="p_alert_10">同意</string>
    <string name="p_alert_11">拒绝并退出应用</string>
</resources>